<resources>
    <!--做到统一添加字符串-->
    <string name="app_name">Calculator</string>
    <string name="app_names">不科学计算器plus</string>
    <string name="AC">AC</string>
    <string name="DEL">DEL</string>
    <string name="ANS">ANS</string>
    <string name="status">+/-</string>
    <string name="divide">÷</string>
    <string name="leftbracket">(</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">×</string>
    <string name="rightbracket">)</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtract">-</string>
    <string name="power">^</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="add">+</string>
    <string name="factorial">x!</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="mod">%</string>
    <string name="equal">=</string>
</resources>
